===v7.0.2===
====Bug Fixes====
 * Fixed the missing slider value text for the Unit Level condition.
 * The Haste conditions no longer have a hard cap of 100%.

===v7.0.1===
 * Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.

====Bug Fixes====
 * Fixed a typo that was preventing Loss of Control icons from reporting their spell.
 * Fixed an error that would happen when upgrading a text layout that was previously unnamed: IconModule_Texts\Texts.lua:150 attempt to concatenate field 'Name' (a nil value)

===v7.0.0===

====Core Systems====
 * You can now create global groups that exist for all characters on your account. These groups can be enabled and disabled on a per-profile basis.
 * Text Layouts are now defined on an account-wide basis instead of being defined for individual profiles.

 * Many icon types, when set on the first icon in a group, are now able to control that entire group with the data that they harvest.

 * All references from one icon or group to another in TellMeWhen are now tracked by a unique ID. This ID will persist no matter where it is moved or exported to.
 ** This includes:
 *** DogTags
 *** Meta icons
 *** Icon Shown conditions (and the other conditions that track icons)
 *** Group anchoring to other groups
 ** The consequence of this is that you can now, for example, import/export a meta icon separately from the icons it is checking and they will automatically find eachother once they are all imported (as long as these export strings were created with TMW v7.0.0+)
 ** IMPORTANT: Existing DogTags that reference other icons/groups by ID cannot be updated automatically - you will need to change these yourself.

====Events/Notifications====
 * Events have been re-branded to Notifications, and you can now add notifications that will trigger continually while a set of conditions evaluate to true.